style.css
/* The Logo */
.logo {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 400px;
    height: 80px;
    padding-bottom: 4px;
    border-bottom: 2px solid black;
    margin-bottom: 10px;
}

#animation {
  transition: opacity 0.5s ease-in-out;
  opacity: 1;
}
/*  -----------------------------   */

/* Formatting for each section  */
.section {
    border-left: 2px solid black;
    border-right: 2px solid black;
    border-top: 2px solid black;
    border-bottom: 2px solid black;
    text-shadow: 2px 2px 4px #888888;
}


/* Intro Section */
.intro {
    padding-top: 10px;
    background-color: #A5F3E8;
}

/* Profile Picture */
.profile_pic {
    justify-content: center;
    display: flex;
}

.shrek {
    width: 15%;
    height: 25%;
    border: 2px ridge black;
    align-self: center;
}

/* My Name */
.name {
    margin-top: 20px;
    font-weight: bold;
    text-align: center;
    font-family: 'Garamond';
    font-size: 24px;
}

/* My Bio */
.bio {
    text-align: center;
    font-family: 'Garamond';
    font-size: 18px;
    padding-bottom: 2px;
}

.toDo {
    margin-left:20px;
    margin-right:20px;
}

/*  -----------------------------   */

/* Social Section */
.socials{
    padding-top: 20px;
    background-color: lightblue;
    font-weight: bold;
    text-align: center;
    font-family: 'Garamond';
    font-size: 24px;
    padding-bottom: 20px;

    column-count: 2;
    column-gap: 6px;
}

.page_links {
    color: blue;
    text-decoration: underline;
    cursor: pointer;
}

.page_links:hover {
    color:red;
}

.social_name {
    column-span: all;
    font-weight: bold;
    text-align: center;
    font-family: 'Garamond';
    font-size: 24px;
}

/* Social Icons Section*/
.social_icons {
    margin-top: 50px;
    /* justify-content: center; */
    /* display: flex; */

}

/* Images that take you to different pages */
.image_link text{
    font-size: 12pt;
    /* padding-right: 20px; */
}

.image_link img {
    width: 120px;
    height: 120px;
    /* margin-left: 50px; */
    /* margin-right: 50px; */
    margin-top: 20px;
    margin-bottom: 30px;
    border: 4px solid #000000;
    transition: border 0.4s;

}

.image_link img:hover {
    border: 12px solid transparent; /* Make the border transparent on hover */

}

.image_link img:default {
    border: 4px solid black;
}



/*  -----------------------------   */

/* Navigation */
.navigation {
    background-color: white;
    position: fixed;
    border: 2px solid black;
    transform: translateY(-50%);
    top: 50%;
    width: 196px;
}

.navigation button {
    display: flex; 
    align-content: center;
    visibility: visible;
    
}

.navigation button:hover {
    color: red;
}

.navigation text {
    display: flex;
    left: 50%;
    padding-top: 2px;
    padding-bottom: 2px;
}




/* Beat Section */
.beat_container {
    padding-top: 20px;
}



.beat_link:hover {
    color: purple
}

.beat_container_title{
    font-weight: bold;
    text-align: center;
    font-family: 'Garamond';
    font-size: 24px
}

.beat_container_description{
    text-align: center;
    font-family: 'Garamond';
    font-size: 18px;
    margin-bottom: 20px;
}

/* Reference to Alucard in beat section */
.alucard {
    font-style: italic;
    font-size: 12pt
}

.alucard:hover {
    font-style: italic;
    font-size: 12pt;
    color: red
}

.beat_title {
    text-align: center;
    display: block;
    font-size: 16pt;
    font-family: 'Times New Roman';
    color: white;
    text-shadow: -1px -1px black, 1px -1px black, 1px 1px black, -1px 1px black;
    padding-bottom: 4px
}



.beat_section {
    display: flow-root;
    padding-top: 20px;
    padding-left: 20px;
    padding-bottom: 10px;
    font-size: 18pt;
    font-family: 'Times New Roman';
    border-top: 2px dashed black;
}

.audio_container {
    column-gap: 20px;
    columns: 2;
    column-fill: auto;
    break-after: column;
}



.beat_section_desc {
    text-align: left;
    display: block;
    font-size: 12pt;
    font-family: 'Times New Roman';
    font-style: normal;
}

.beat{
    text-align: center;
    display: block;
    padding-top: 16px;
    padding-bottom: 20px
}

.beat_divider{
    border-top: 1px dashed black;

}


/* Specifications for a game section title */
.game_container {
    padding-top: 20px;
    background-color: #D2DEFF;
}

.game_container_title {
    font-weight: bold;
    text-align: center;
    font-family: 'Garamond';
    font-size: 36px
}

.game_container_title{
    font-weight: bold;
    text-align: center;
    font-family: 'Garamond';
    font-size: 24px
}

.game_container_description{
    text-align: center;
    font-family: 'Garamond';
    font-size: 18px;
    margin-bottom: 20px;
}

/* Specifications for a game window */
.game {
    margin: 4px 0 0 4px;
    box-shadow: 0 0 0 2px #000000, 0 0 0 3px #ffffff;
}

